--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qrcode-with-logos",
+  "name": "cxq-qrcode-with-logos",
   "version": "1.0.2",
   "description": "",
   "main": "dist/QRcode-with-logo.js",
